--- a/views/index.html
+++ b/views/index.html
@@ -37,6 +37,15 @@
                       </div> 
                     </li> 
                   {{/products}}
+                  {{^products.0}}
+                  <li class="list-group-item">
+                   
+                    <div class="media align-items-lg-center flex-column flex-lg-row p-3">
+                        <div class="media-body order-2 order-lg-1">
+                          <h5 class="mt-0 font-weight-bold mb-2">No Products</h5>
+                        </div>
+                    </div>
+                  {{/products.0}}
               </ul> <!-- End -->
           </div>
       </div>
